Add basic notification and permission

--- a/demos/camera/src/main/res/values/strings.xml
+++ b/demos/camera/src/main/res/values/strings.xml
@@ -8,6 +8,13 @@
     <string name="streaming_channel_name">Camera Streaming</string>
     <string name="streaming_channel_description">Notification channel for camera streaming service</string>
 
+    <!-- Service Notifications -->
+    <string name="service_notification_title">StreamPack Camera Service</string>
+    <string name="service_notification_text_created">Service created</string>
+    <string name="service_notification_text_streaming">Streaming in progress…</string>
+    <string name="service_notification_text_error">Error: %1$s</string>
+    <string name="service_notification_text_stopped">Streaming stopped</string>
+
     <!-- Preview -->
     <string name="live">Start Live</string>
     <string name="stop">Stop</string>
